# kalshiflow

./: .env.example  .gitignore  CAPTAIN_OVERVIEW.md  CLAUDE.md  CONFIGCLEANUP.md  SHIP-TO-PAPER-CHECKLIST.md  SUPABASE_SETUP.md  TRADER_V3_SESSION_MANAGEMENT_SUMMARY.md  TRADING_DATA_COMPONENT.md  analytics_rewrite.md  app_overview.md  check_ws_messages.py  claude-progress.txt  deploy.sh  deployment_plan.json  detail-view-enhancement-summary.txt  enhance_debug_logging.py  enhanced_validation.js  feature_plan.json  init.sh  milestone5_validation.js  nixpacks.toml  package-lock.json  package.json  railway-env-variables.sh  railway.toml  railway_deployment.json  render.yaml  render_next_instructions.md  requirements.txt  rewrite-progress.md  run_v3.sh  set-railway-vars.sh  test-css.js  test-puppeteer.js  test_all_connections.py  test_env_priority.py  test_order_fix.py  test_pooled_connection.py  test_railway_db.py  (+4 more)
backend/: .env.paper.example  .gitignore  .nixpacks.ignore  Procfile  README.md  RL_SYSTEM_SUMMARY.md  RL_TRADER_GRACEFUL_DEGRADATION.md  TRADER_2.0.md  analyze_model_bias.py  claude-progress.txt  cleanup_log_20251214_162029.json  cleanup_log_20251214_162039.json  cleanup_log_20251214_162050.json  cleanup_log_20251214_162217.json  cleanup_log_20251214_162500.json  cleanup_log_20251226_204424.json  debug_connection.py  nixpacks.toml  position_sizing_verification_20251214_234919.json  position_sizing_verification_20251214_234951.json  pyproject.toml  railway-rl.toml  railway-v3.toml  railway.toml  requirements.txt  rewrite-progress.md  test_analytics_debug.py  test_demo_balance.py  test_environment_fixes.py  test_m7b_fixes.py  test_m7b_quick.py  test_order_fills.py  test_portfolio_fix.py  test_ws_client.py
backend/docs/: ACTOR_LIFECYCLE_ANALYSIS.md  M2_TRADER_STATUS_EXAMPLE.md  ORDER_GROUPS_WALKTHROUGH.md  STARTUP_FLOW_MAPPING.md  TRADER_LIFECYCLE_SUMMARY.md  orderbook_delta_flow.md
backend/examples/: episode_flow_example.py
backend/migrations/: 001_initial_schema.sql  002_indexes.sql  003_fix_constraints.sql
backend/rl-assessment/: model-compatibility-analysis.md
backend/rl-planning/: rewrite-progress.md  rl-implementation-plan.json
backend/scripts/: build_pair_index.py  capture_orderbook_sample.py  check_database.py  check_profits.py  debug_m7_cash_flow.py  debug_market_orderbooks.py  debug_market_selection.py  debug_orderbook.py  debug_orderbook_messages.py  demo_curriculum_learning.py  fetch_session_data.py  query_rl_orderbook.py  run_rl_and_query.py  run_rl_trader_hold.sh  show_orderbook_simple.py  start_rl_orderbook_collector.sh  test_actor_pipeline.py  test_bulk_close_positions.py  test_curriculum_training.sh  test_duplicate_detection_stats.py  test_env_sessions_5_6.py  test_env_simple.py  test_m7_final.py  test_m7_fixed.py  test_market_agnostic_env_simple.py  test_market_agnostic_env_sync.py  test_new_pattern.py  test_orderbook_connection.py  test_rl_multimarket.py  test_session_loader_real.py  test_simple_curriculum.py  test_trader_degraded_mode.py  test_trader_ux.sh  test_trading_state_broadcast.py  test_v3_metadata_fix.sh  test_ws_minimal.py  train_with_sb3.py  verify_action_space_config.py  verify_demo_urls.py  verify_training_trading_consistency.py
backend/tests/: __init__.py  test_auth.py  test_backend_e2e_regression.py  test_captain_e2e_smoke.py  test_database.py  test_models.py  (+9 more)
(+1200 files in other folders)
